[gd_scene load_steps=38 format=2]

[ext_resource path="res://Assets/Dog/Run (2).png" type="Texture" id=1]
[ext_resource path="res://Assets/Dog/Run (3).png" type="Texture" id=2]
[ext_resource path="res://Assets/Dog/Run (4).png" type="Texture" id=3]
[ext_resource path="res://Assets/Dog/Run (5).png" type="Texture" id=4]
[ext_resource path="res://Assets/Dog/Run (6).png" type="Texture" id=5]
[ext_resource path="res://Assets/Dog/Run (7).png" type="Texture" id=6]
[ext_resource path="res://Assets/Dog/Run (8).png" type="Texture" id=7]
[ext_resource path="res://Assets/Dog/Run (1).png" type="Texture" id=8]
[ext_resource path="res://Assets/Dog/Idle (2).png" type="Texture" id=9]
[ext_resource path="res://Assets/Dog/Idle (1).png" type="Texture" id=10]
[ext_resource path="res://Assets/Dog/Idle (4).png" type="Texture" id=11]
[ext_resource path="res://Assets/Dog/Idle (3).png" type="Texture" id=12]
[ext_resource path="res://Assets/Dog/Idle (5).png" type="Texture" id=13]
[ext_resource path="res://Assets/Dog/Idle (6).png" type="Texture" id=14]
[ext_resource path="res://Assets/Dog/Idle (7).png" type="Texture" id=15]
[ext_resource path="res://Assets/Dog/Idle (8).png" type="Texture" id=16]
[ext_resource path="res://Assets/Dog/Idle (9).png" type="Texture" id=17]
[ext_resource path="res://Assets/Dog/Idle (10).png" type="Texture" id=18]
[ext_resource path="res://Src/Player/Player.gd" type="Script" id=19]
[ext_resource path="res://Assets/Dog/Jump (5).png" type="Texture" id=20]
[ext_resource path="res://Assets/Dog/Jump (8).png" type="Texture" id=21]
[ext_resource path="res://Assets/Dog/Jump (6).png" type="Texture" id=22]
[ext_resource path="res://Assets/Dog/Fall (7).png" type="Texture" id=23]
[ext_resource path="res://Assets/Dog/Jump (3).png" type="Texture" id=24]
[ext_resource path="res://Assets/Dog/Jump (4).png" type="Texture" id=25]
[ext_resource path="res://Assets/Dog/Fall (5).png" type="Texture" id=26]
[ext_resource path="res://Assets/Dog/Jump (7).png" type="Texture" id=27]
[ext_resource path="res://Assets/Dog/Fall (8).png" type="Texture" id=28]
[ext_resource path="res://Assets/Dog/Fall (4).png" type="Texture" id=29]
[ext_resource path="res://Assets/Sound/mountain-trials.ogg" type="AudioStream" id=30]
[ext_resource path="res://Assets/Dog/Fall (6).png" type="Texture" id=31]
[ext_resource path="res://Assets/Dog/Fall (3).png" type="Texture" id=32]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 24 ), ExtResource( 25 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 27 ), ExtResource( 21 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 29 ), ExtResource( 26 ), ExtResource( 31 ), ExtResource( 23 ), ExtResource( 28 ) ],
"loop": true,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 9 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "idel",
"speed": 14.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 92.9153, 189.015 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 72, 208 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 77.9311, 25.9931 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 80, 186.667 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.3, 0.3 )
collision_mask = 8
script = ExtResource( 19 )
speed = Vector2( 500, 1000 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -240 )
frames = SubResource( 1 )
animation = "idel"

[node name="enemyDetector" type="Area2D" parent="."]
priority = 1.0
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemyDetector"]
modulate = Color( 0.290196, 0.0431373, 0.0431373, 1 )
position = Vector2( -26.6667, -240 )
shape = SubResource( 2 )

[node name="worldCollision" type="CollisionShape2D" parent="."]
position = Vector2( -16, -224 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
limit_left = 0
limit_bottom = 630
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.0
drag_margin_right = 0.0

[node name="stompDetector" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 32

[node name="stompDetectorCollision" type="CollisionShape2D" parent="stompDetector"]
position = Vector2( -17.6777, -39.5981 )
shape = SubResource( 4 )

[node name="playerKiller" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerKiller"]
position = Vector2( -26.6667, -240 )
shape = SubResource( 5 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 30 )
autoplay = true
[connection signal="body_entered" from="enemyDetector" to="." method="_on_enemyDetector_body_entered"]
[connection signal="area_entered" from="stompDetector" to="." method="_on_stompDetector_area_entered"]
[connection signal="area_entered" from="playerKiller" to="." method="_on_playerKiller_area_entered"]
[connection signal="body_entered" from="playerKiller" to="." method="_on_playerKiller_body_entered"]
[connection signal="body_exited" from="playerKiller" to="." method="_on_playerKiller_body_exited"]
